--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=easycare
+spring.datasource.url=jdbc:mysql://localhost:3306/healthcare
+spring.datasource.username=root
+spring.datasource.password=rhea2005
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
